# torimegane

./: CMakeLists.txt  README.md  bd_backend.cpp  bd_backend.hpp  bd_telemetry.cpp  bd_telemetry.hpp  main.cpp
quick/: BdBattery.qml  BdBatteryTest.qml  BdCell.qml  BdCrosshair.qml  BdRollIndicator.qml  BdRssi.qml  BdStatusBar.qml  BdTextData.qml  BdVelocity.qml  main.qml
